<resources>
    <string name="app_name">Login</string>
    <string name="login_title">Login</string>
    <string name="register_text">Register</string>
    <string name="test_text">Test</string>
    <string name="life_text">Life Cycle Activity</string>

    <string name="text1">Text View 1</string>
    <string name="text2">Text View 2</string>
    <string name="text3">Text View 3</string>

    <string name="do_action">Do Action</string>
    <string name="next">Next</string>
    <string name="another_activity">Another Activity</string>

    <string name="heading">Services In Android</string>
    <string name="startButtonText">Start the Service</string>
    <string name="stopButtonText">Stop the Service</string>

    <string name="heading2">Two Fragments in One Activity</string>
    <string name="fragment1_button">Display First Fragment</string>
    <string name="fragment2_button">Display Second Fragment</string>
    <string name="fragment1_text1">Displaying contents of the First Fragment</string>
    <string name="fragment2_text1">Displaying contents of the Second Fragment</string>
    <string name="channel_name">General</string>
    <string name="channel_description">This channel is for notifications related to the general app usage</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="new_game">New Game</string>
    <string name="help">Help</string>

</resources>