<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"
        android:text="@string/text3"
        android:textSize="@dimen/text_size"
        android:textColor="@color/blue"
        android:layout_gravity="right"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:text="@string/text2"
        android:textSize="@dimen/text_size"
        android:textColor="@color/green"
        android:layout_gravity="center"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView1"
        android:text="@string/text1"
        android:textSize="@dimen/text_size"
        android:textColor="@color/red"
        android:layout_gravity="left"
        />


</LinearLayout>