<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:id="@+id/main"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView1"
        android:text="@string/text1"
        android:textSize="@dimen/text_size"
        android:layout_marginTop="@dimen/small_margin"
        android:layout_marginLeft="@dimen/big_margin"
        android:textColor="@color/blue"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:layout_toRightOf="@+id/textView1"
        android:text="@string/text2"
        android:textSize="@dimen/text_size"
        android:layout_marginTop="@dimen/small_margin"
        android:layout_marginLeft="@dimen/big_margin"
        android:textColor="@color/red"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"
        android:text="@string/text3"
        android:layout_toRightOf="@+id/textView2"
        android:textSize="@dimen/text_size"
        android:layout_marginTop="@dimen/big_margin"
        android:layout_marginLeft="@dimen/big_margin"
        android:textColor="@color/green"
        />


</RelativeLayout>