<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/main"
    >
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/layout_1"
        android:layout_marginTop="@dimen/small_margin"
        android:orientation="horizontal"
        >
        <androidx.cardview.widget.CardView
            android:layout_width="110dp"
            android:layout_marginLeft="@dimen/small_margin"
            android:layout_height="100dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Card 1"/>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="110dp"
            android:layout_height="100dp"
            android:layout_marginLeft="@dimen/small_margin"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Card 2"/>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="110dp"
            android:layout_height="100dp"
            android:layout_marginLeft="@dimen/small_margin"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Card 3"/>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/layout_2"
        android:layout_marginTop="@dimen/small_margin"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            android:text="@string/text3"
            android:textSize="@dimen/text_size"
            android:background="@color/blue"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            android:text="@string/text2"
            android:textSize="@dimen/text_size"
            android:background="@color/green"
            android:paddingTop="@dimen/big_padding"
            android:paddingRight="@dimen/big_padding"
            android:paddingLeft="@dimen/small_padding"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView1"
            android:text="@string/text1"
            android:textSize="@dimen/text_size"
            android:paddingTop="@dimen/big_padding"
            android:paddingRight="@dimen/big_padding"
            android:background="@color/red"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    </LinearLayout>




</LinearLayout>